[package]
name = "raft"
version = "1.0.0"
authors = ["Mattisonchao"]
license = "Apache-2.0"
keywords = ["raft"]
edition = "2018"

[[example]]
name = "mem_node"
path = "examples/main.rs"


[dependencies]
rand = "0.8.0"
log = "0.4.14"
log4rs = "1.0.0"
tokio = { version = "1.12.0", features = ["full"] }